--- a/Prova-projeto/all.css
+++ b/Prova-projeto/all.css
@@ -152,9 +152,15 @@ main{
     flex-direction: column;
 }
 
-.info h2 { margin: 0; font-size: 22px; }
-.info h3 { margin: 5px 0; color: #555; font-size: 16px; }
-.info p { margin: 5px 0 15px; color: #777; font-size: 14px; }
+.info h2 { 
+    margin: 0; font-size: 22px; 
+}
+.info h3 {
+    margin: 5px 0; color: #555; font-size: 16px;
+}
+.info p { 
+    margin: 5px 0 15px; color: #777; font-size: 14px; 
+}
 
 .autor {
     display: flex;
